@@ -1723,10 +1723,9 @@ testext::
 	@-$(CMP) $(srcdir)/$@.ok _$@ && rm -f _$@ testext.awk
 
 readdir:
-	@echo This test can fail on some filesystems.
 	@echo $@
-	@ls -fli $(top_srcdir) | sed 1d | $(AWK) -f $(srcdir)/readdir0.awk > $@.ok
 	@$(AWK) -f $(srcdir)/readdir.awk $(top_srcdir) > _$@
+	@ls -fli $(top_srcdir) | sed 1d | $(AWK) -f $(srcdir)/readdir0.awk -v extout=_$@ > $@.ok
 	@-$(CMP) $@.ok _$@ && rm -f $@.ok _$@
 
 fts:
